--- a/popup.html
+++ b/popup.html
@@ -1,8 +1,20 @@
-<!DOCTYPE html>
 <html>
 <body>
     <h1>This is my popup!</h1>
 
-    <script src="popup.js"></script>
+    <div>
+        <button id="add-checkbox">
+            Add Checkboxes
+        </button>
+
+        <button id="remove-checkbox">
+            Remove Checkboxes
+        </button>
+
+        <button id="toggle-checkbox">
+            Toggle Checkboxes
+        </button>
+    </div>
+    <script type="module" src="popup.js"></script>
 </body>
 </html>
