chore: add bulk delete btn with listener

--- a/popup.html
+++ b/popup.html
@@ -14,6 +14,10 @@
         <button id="toggle-checkbox">
             Toggle Checkboxes
         </button>
+
+        <button id="bulk-delete">
+            Bulk Delete
+        </button>
     </div>
     <script type="module" src="popup.js"></script>
 </body>
