fix: readd missing commit for add-checkbox

--- a/popup.html
+++ b/popup.html
@@ -1,6 +1,6 @@
 <html>
 <body>
-    <h1>This is my popup!</h1>
+    <h1>Gemini Delete Chat</h1>
 
     <div>
         <button id="add-checkbox">
@@ -13,6 +13,10 @@
 
         <button id="toggle-checkbox">
             Toggle Checkboxes
+        </button>
+
+        <button id="bulk-delete">
+            Bulk Delete
         </button>
     </div>
     <script type="module" src="popup.js"></script>
